tests/rosetta/out/Smalltalk/active-object.out
/tmp/active-object.st:8: parse error, expected ']'
