tests/rosetta/out/Smalltalk/active-object.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| PI sinApprox term sum n denom dt s t1 k1 i t2 k2 i2 |
PI := 3.141592653589793.
sinApprox := [:x | term := x.
sum := x.
n := 1.
[(n <= 12)] whileTrue: [.
denom := (((2 * n)) * ((((2 * n)) + 1))) asFloat.
term := (((((-term * x)) * x)) / denom).
sum := (sum + term).
n := (n + 1).
].
.
sum. ].
dt := 0.01.
s := 0.
t1 := 0.
k1 := sinApprox value: 0.
i := 1.
[(i <= 200)] whileTrue: [.
t2 := ((i asFloat) * dt).
k2 := sinApprox value: (t2 * PI).
s := (s + ((((((k1 + k2)) * 0.5)) * ((t2 - t1))))).
t1 := t2.
k1 := k2.
i := (i + 1).
].
.
i2 := 1.
[(i2 <= 50)] whileTrue: [.
t2 := (2 + (((i2 asFloat) * dt))).
k2 := 0.
s := (s + ((((((k1 + k2)) * 0.5)) * ((t2 - t1))))).
t1 := t2.
k1 := k2.
i2 := (i2 + 1).
].
.
Transcript show: (s) printString; cr.
